# ferros-v0

./: Cargo.toml  README.md  run.sh  rust-toolchain  x86_64-build-target.json
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
notes/: note01.md  note02.md  note03.md  note04.md  note05.md  note06.md  note07.md  note08.md  note09.md  note10.md  note11.md  note12.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
