[package]
name = "ferros"
version = "0.1.0"
authors = ["hmiya <h.miya.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10"

[workspace]
members = ["boot"]


[profile.dev]
panic = "abort" # abort on panic

[profile.release]
panic = "abort"
