[package]
name = "ferros"
version = "0.1.0"
authors = ["hmiya <h.miya.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # automatically exit QEMU
    "-serial", "stdio", # debug output to stdio
    "-display", "none" # run background when testing
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # seconds

[[test]]
name = "should_panic"
harness = false

# [profile.dev]
# panic = "abort" # abort on panic

# [profile.release]
# panic = "abort"
